# Enterprise-Architecture

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  COMPLIANCE.md  Dockerfile  LICENSE  Makefile  NOTICE.md  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  litellm_config.dev.yaml  litellm_config.prod.yaml  litellm_config.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_add_conversation_memories.py  002_add_agent_memory.py  003_add_conversation_fields.py  004_add_agent_traces.py  005_add_feedback_system.py  006_add_plugins.py  007_analytics.py  008_ingestion.py  009_api_keys.py  010_agent_memory.py  011_compliance_runs.py  012_add_budget_and_metrics_tables.py  013_add_execution_plans_table.py  014_add_write_operations_table.py  015_add_fine_tuning_jobs_table.py  016_gdpr_requests.py  017_user_goals.py  018_add_missing_foreign_keys.py
deploy/edge/: Dockerfile.edge  docker-compose.edge.yml  edge-config.yaml  requirements.edge.txt
deploy/grafana/: SLO_DEFINITIONS.md  alert-rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml  slo-recording-rules.yml
deploy/helm/: DEPLOYMENT_GUIDE.md  HELM_CHART_SUMMARY.md  QUICKSTART.md  validate-chart.sh
deploy/logging/: README.md  docker-compose.logging.yml  grafana-dashboards.yml  grafana-datasources.yml  loki-config.yml  promtail-config.yml
docs/: ARCHITECTURE.md  COMPREHENSIVE_REVIEW.md  Enterprise_Agent_Platform_Presentation.pptx  PAI_GAP_ANALYSIS.md  PLUGIN_SDK.md  RUNBOOK.md  generate_presentation.py  observability-deployment.md  observability.md  phase3b_advanced_rag.md  phase3c-connectors-implementation.md  phase4a-advanced-orchestration.md
docs/architecture/: .gitkeep  ARCHITECTURE.md
docs/roadmap/: ROADMAP.md
frontend/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
scripts/: backup.sh  build_offline.sh  db-health.sh  db-maintenance.py  dev-start.sh  init-db.sql  restore.sh  seed.py
src/: __init__.py  config.py  database.py  main.py
tests/: CONFTEST_IMPLEMENTATION.md  FIXTURE_REFERENCE.md  README_TESTS.md  conftest.py  test_agent_memory.py  test_api_keys.py  test_audit.py  test_auth.py  test_cache.py  test_chat.py  test_chunker.py  test_config.py  test_eap_cli.py  test_edge.py  test_feedback_service.py  test_finetuning_service.py  test_goal_service.py  test_hot_reload.py  test_ingestion_job_model.py  test_model_escalation.py  test_multimodal.py  test_multiregion.py  test_observability.py  test_orchestrator_complexity.py  test_parsers.py  test_phase_11bc.py  test_rag.py  test_saml.py  test_sdk_generator.py  test_tenant_admin.py  test_tenant_isolation.py  test_webhooks.py  test_websocket.py
(+331 files in other folders)
